KIconLoader: prefer icons from current theme before falling back to other themes

BUG: 445804